2025-07-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Do not use systemd-run which causes
	problems.

2025-07-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (vc-svn-global-switches): Use gnome-keyring for password
	stores.

2025-07-04  Zhengyi Fu  <i@fuzy.me>

	Improve eat shell integration on remote machines

	* init.el (+eat-install-helpers): New command.
	(eat-exec): Make it connection local variables aware.
	* early-init.el (straight-use-symlinks): Set to nil.

2025-07-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-db-sync): Run the commands in a new session
	avoid various problems.

2025-07-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (grep-mode-hook): Fix configuration for `nerd-icons-grep'.

2025-07-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (eat): Set default shell when using tramp.

2025-07-03  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/pp-posframe.el (pp-posframe-display-value): Use
	`line-prefix' property instead of `display' property.

2025-07-03  Zhengyi Fu  <i@fuzy.me>

	Update gptel-config

	* site-lisp/gptel-config.el (+gptel-run-command-sandboxed): New function.
	(+gptel-forge-post-cancel): Change the messages.

2025-07-03  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Fix recipe for reader.

2025-07-01  Zhengyi Fu  <i@fuzy.me>

	* init.el:
	* packages.el: Remove bufferlo.

2025-07-01  Zhengyi Fu  <i@fuzy.me>

	* init.el (+meow-setup-indicator): New function.  Added to
	`meow-global-mode-hook'.

2025-07-01  Zhengyi Fu  <i@fuzy.me>

	* init.el (tramp-compat-temporary-file-directory): Set to
	"$XDG_RUNTIME_DIR/emacs".

2025-06-27  Zhengyi Fu  <i@fuzy.me>

	Update elfeed configuration

	* init.el (+elfeed-db-sync): Call `elfeed-db-gc'. Remove the tmp
	file before exiting.
	(elfeed-search-mode-map): Bind "q" to `elfeed-db-unload'.

2025-06-24  Zhengyi Fu  <i@fuzy.me>

	* .gitignore: Add project.eld and network-security.eld.

2025-06-23  Zhengyi Fu  <i@fuzy.me>

	Enable --autostash in `magit-pull' by default
